# rust-level-up

aa-test/: Cargo.toml
aa-test/src/: main.rs
acronym/.exercism/: metadata.json
acronym/src/: lib.rs
anagram/.exercism/: metadata.json
anagram/src/: lib.rs
armstrong-numbers/.exercism/: metadata.json
armstrong-numbers/src/: lib.rs
arrays_and_slices/: Cargo.toml  README.md
arrays_and_slices/src/: main.rs
beer-song/.exercism/: metadata.json
beer-song/src/: lib.rs
clock/.exercism/: metadata.json
clock/src/: lib.rs
concurrency/: README.md
concurrency/threads/: README.md
crust-of-rust/: README.md
crust-of-rust/channel/: README.md
crust-of-rust/function-closures/: Cargo.toml
crust-of-rust/iter-flatten/: Cargo.toml  README.md
crust-of-rust/pointers/: README.md
crust-of-rust/vecmac/: README.md
custom-error/: Cargo.toml
custom-error/src/: main.rs
difference-of-squares/.exercism/: metadata.json
difference-of-squares/src/: lib.rs
exercism/: assembly_line.rs  log_level.rs
fizzbuzz/src/: main.rs
gigasecond/: Cargo.toml
gigasecond/.exercism/: metadata.json
gigasecond/src/: lib.rs
grains/.exercism/: metadata.json
grains/src/: lib.rs
guessing_game/src/: main.rs
half-hour-rust/: Cargo.toml
half-hour-rust/src/: main.rs
hashmap_entry_api/: Cargo.toml
hashmap_entry_api/src/: lib.rs
hashmap_entry_api/tests/: test.rs
iter-flatten/: README.md
iter-flatten/src/: lib.rs
iterators/: README.md
iterators/src/: main.rs
linz-06-21/: Cargo.toml  README.md
luhn/src/: lib.rs
rustrie/: Cargo.toml
tuples/: README.md
(+30 files in other folders)
