[package]
name = "aa-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
# tracing-futures = { version = "0.2.5", default-features = false }
tracing-subscriber = "0.3"
color-eyre = "0.5"
rand = "0.8.4"

